fixed spacing/positioning from reset.css

--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ aside {
     margin-left: 20px;
     width: 445px;
     padding-top: 40px;
-    padding-bottom: 266px;
+    padding-bottom: 256px;
 }
 
 footer {
